# hunter

cmake/configs/: default.cmake
cmake/find/: FindCURL.cmake
cmake/projects/CURL/: hunter.cmake
cmake/projects/CURL/schemes/: url_sha1_curl_autotools.cmake.in  url_sha1_curl_windows.cmake.in
cmake/projects/curl/: hunter.cmake
cmake/projects/curl/schemes/: url_sha1_curl_windows.cmake.in
cmake/projects/dlib/: hunter.cmake
examples/CURL/: CMakeLists.txt  foo.cpp
examples/curl/: CMakeLists.txt  foo.cpp
